[package]
name = "keiros"
version = "0.1.0"
edition = "2024"

[lib]
name = "keiros"
path = "src/lib.rs"

[[bin]]
name = "keiros"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml_edit = "0.22.27"
regex = "1.0"
